--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,7 +1,3 @@
-<!--/* Workaround for bug https://youtrack.jetbrains.com/issue/IDEA-132738 -->
-<!--@thymesVar id="users" type="String"-->
-<!--@thymesVar id="content" type="String"-->
-<!--*/-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
@@ -10,6 +6,14 @@
 </head>
 <body>
 <h2>USERS</h2>
+<form action="#" th:action="@{'/users'}" th:object="${newUser}" method="post">
+    <label for="name">Name</label>
+    <input type="text" id="name" th:field="*{name}"/>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" th:field="*{email}"/>
+    <input type="submit" value="Save">
+</form>
 <div th:each="user:${users}">
     <p th:text="${user.name}"></p>
     <p th:text="${user.email}"></p>
