--- a/src/main/resources/static/css/style.build.tailwind.css
+++ b/src/main/resources/static/css/style.build.tailwind.css
@@ -32,7 +32,7 @@ html {
   -moz-tab-size: 4; /* 3 */
   -o-tab-size: 4;
      tab-size: 4; /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system, system-ui, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; /* 4 */
 }
 
 /*
@@ -507,4 +507,41 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+} .static {
+  position: static;
+} .relative {
+  position: relative;
+} .block {
+  display: block;
+} .inline {
+  display: inline;
+} .table {
+  display: table;
+} .hidden {
+  display: none;
+} .border {
+  border-width: 1px;
+} .bg-grey-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 22 35 / var(--tw-bg-opacity));
+} .bg-primary-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 144 49 / var(--tw-bg-opacity));
+} .text-center {
+  text-align: center;
+} .text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+} .uppercase {
+  text-transform: uppercase;
+} .text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+} .underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+} .outline {
+  outline-style: solid;
+} .filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
