--- a/src/main/resources/static/css/fonts/lumios-marker.scss
+++ b/src/main/resources/static/css/fonts/lumios-marker.scss
@@ -1,30 +1,30 @@
 @font-face {
-  font-family: 'Raleway';
-  src: url('../../fonts/lumios-marker/lumios-marker.woff2');
+  font-family: 'Lumios-Maker';
+  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('../../fonts/lumios-marker/lumios-marker.woff2');
+  font-family: 'Lumios-Maker';
+  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('../../fonts/lumios-marker/lumios-marker.woff2');
+  font-family: 'Lumios-Maker';
+  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('../../fonts/lumios-marker/lumios-marker.woff2');
+  font-family: 'Lumios-Maker';
+  src: url('../../static/fonts/lumios-marker/lumios-marker.woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
