--- a/src/main/resources/static/css/style.build.tailwind.css
+++ b/src/main/resources/static/css/style.build.tailwind.css
@@ -507,41 +507,403 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+} .sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 } .static {
   position: static;
+} .fixed {
+  position: fixed;
+} .absolute {
+  position: absolute;
 } .relative {
   position: relative;
+} .sticky {
+  position: -webkit-sticky;
+  position: sticky;
+} .inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+} .top-0 {
+  top: 0px;
+} .right-0 {
+  right: 0px;
+} .z-40 {
+  z-index: 40;
+} .z-10 {
+  z-index: 10;
+} .mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+} .-mr-12 {
+  margin-right: -3rem;
+} .ml-1 {
+  margin-left: 0.25rem;
+} .mt-5 {
+  margin-top: 1.25rem;
+} .mr-4 {
+  margin-right: 1rem;
+} .ml-3 {
+  margin-left: 0.75rem;
+} .mr-3 {
+  margin-right: 0.75rem;
+} .-ml-0\.5 {
+  margin-left: -0.125rem;
+} .-mt-0\.5 {
+  margin-top: -0.125rem;
+} .-ml-0 {
+  margin-left: -0px;
+} .-mt-0 {
+  margin-top: -0px;
+} .-mr-2 {
+  margin-right: -0.5rem;
+} .ml-auto {
+  margin-left: auto;
+} .mt-3 {
+  margin-top: 0.75rem;
 } .block {
   display: block;
+} .inline-block {
+  display: inline-block;
 } .inline {
   display: inline;
+} .flex {
+  display: flex;
+} .inline-flex {
+  display: inline-flex;
 } .table {
   display: table;
 } .hidden {
   display: none;
+} .h-full {
+  height: 100%;
+} .h-10 {
+  height: 2.5rem;
+} .h-6 {
+  height: 1.5rem;
+} .h-0 {
+  height: 0px;
+} .h-8 {
+  height: 2rem;
+} .h-9 {
+  height: 2.25rem;
+} .h-12 {
+  height: 3rem;
+} .h-96 {
+  height: 24rem;
+} .h-16 {
+  height: 4rem;
+} .min-h-\[640px\] {
+  min-height: 640px;
+} .min-h-0 {
+  min-height: 0px;
+} .w-full {
+  width: 100%;
+} .w-10 {
+  width: 2.5rem;
+} .w-6 {
+  width: 1.5rem;
+} .w-auto {
+  width: auto;
+} .w-14 {
+  width: 3.5rem;
+} .w-9 {
+  width: 2.25rem;
+} .w-12 {
+  width: 3rem;
+} .max-w-xs {
+  max-width: 20rem;
+} .max-w-7xl {
+  max-width: 80rem;
+} .flex-1 {
+  flex: 1 1 0%;
+} .flex-shrink-0 {
+  flex-shrink: 0;
+} .shrink {
+  flex-shrink: 1;
+} .-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+} .translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+} .transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+} .flex-col {
+  flex-direction: column;
+} .items-center {
+  align-items: center;
+} .justify-center {
+  justify-content: center;
+} .justify-between {
+  justify-content: space-between;
+} .space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+} .space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+} .overflow-y-auto {
+  overflow-y: auto;
+} .rounded-full {
+  border-radius: 9999px;
+} .rounded-md {
+  border-radius: 0.375rem;
+} .rounded-lg {
+  border-radius: 0.5rem;
+} .border-4 {
+  border-width: 4px;
 } .border {
   border-width: 1px;
-} .bg-grey-700 {
+} .border-t {
+  border-top-width: 1px;
+} .border-dashed {
+  border-style: dashed;
+} .border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+} .border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+} .bg-gray-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(16 22 35 / var(--tw-bg-opacity));
-} .bg-primary-500 {
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+} .bg-gray-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(228 144 49 / var(--tw-bg-opacity));
-} .text-center {
-  text-align: center;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+} .bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+} .bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+} .bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+} .bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 12 15 / var(--tw-bg-opacity));
+} .bg-opacity-75 {
+  --tw-bg-opacity: 0.75;
+} .p-4 {
+  padding: 1rem;
+} .p-1 {
+  padding: 0.25rem;
+} .p-2 {
+  padding: 0.5rem;
+} .px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+} .px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+} .py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+} .py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+} .py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+} .px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+} .px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+} .pt-2 {
+  padding-top: 0.5rem;
+} .pt-5 {
+  padding-top: 1.25rem;
+} .pb-4 {
+  padding-bottom: 1rem;
+} .pl-1 {
+  padding-left: 0.25rem;
+} .pt-1 {
+  padding-top: 0.25rem;
+} .pb-3 {
+  padding-bottom: 0.75rem;
+} .pt-4 {
+  padding-top: 1rem;
+} .text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+} .text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+} .text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 } .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+} .font-medium {
+  font-weight: 500;
+} .font-semibold {
+  font-weight: 600;
 } .uppercase {
   text-transform: uppercase;
-} .text-red-600 {
+} .text-white {
   --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+} .text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+} .text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+} .text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+} .text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 } .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+} .opacity-0 {
+  opacity: 0;
+} .opacity-100 {
+  opacity: 1;
 } .outline {
   outline-style: solid;
 } .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+} .transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+} .transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+} .duration-300 {
+  transition-duration: 300ms;
+} .ease-linear {
+  transition-timing-function: linear;
+} .ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+} .hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+} .hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+} .hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+} .focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+} .focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+} .focus\:ring-inset:focus {
+  --tw-ring-inset: inset;
+} .focus\:ring-white:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+} .focus\:ring-indigo-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
+} .focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px;
+} .focus\:ring-offset-gray-800:focus {
+  --tw-ring-offset-color: #1f2937;
+} .group:hover .group-hover\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+} .group:hover .group-hover\:text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+} @media (min-width: 640px) {
+
+  .sm\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:pl-3 {
+    padding-left: 0.75rem;
+  }
+
+  .sm\:pt-3 {
+    padding-top: 0.75rem;
+  }
+} @media (min-width: 768px) {
+
+  .md\:fixed {
+    position: fixed;
+  }
+
+  .md\:inset-y-0 {
+    top: 0px;
+    bottom: 0px;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:w-64 {
+    width: 16rem;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:pl-64 {
+    padding-left: 16rem;
+  }
+} @media (min-width: 1024px) {
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
