--- a/src/main/resources/static/css/index.scss
+++ b/src/main/resources/static/css/index.scss
@@ -4,3 +4,8 @@
 .bg-linear {
   background: linear-gradient(180deg, #000000 -26.87%, rgba(0, 0, 0, 0) 119%);
 }
+
+nav {
+  position: relative;
+  z-index: 10;
+}
