--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../static/css/index.css">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body class="bg-black">
-<nav x-data="{ open: false }" class="bg-linear">
+<body class="bg-black text-white">
+<nav x-data="{ open: false }" class="bg-linear sticky top-0 z-10">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-16">
                 <div class="hidden sm:block sm:ml-6">
@@ -110,5 +110,52 @@ Heroicon name: outline/x" x-state:on="Menu open" x-state:off="Menu closed" class
         </div>
     </div>
 </nav>
+<main>
+    <img class="relative w-full" style="top: -64px" src="../static/images/sushi.webp" alt="Menu call to action background">
+
+    <section id="menus">
+        <article class="flex justify-center gap-4">
+            <img src="../static/images/menu-1.png" alt="menu_name">
+            <div class="border-4 border-white">
+                <h2 class="font-body text-8xl mb-6">Китайская кухня</h2>
+                <ol>
+                    <li class="border-b">
+                        <div class="flex justify-between">
+                            <h3 class="font-body text-5xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-5xl">649.90</h3>
+                        </div>
+
+                        <p class="text-lg">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li>
+                        <h3>Курица “Кунг пао”</h3>
+                        <h3>649.90</h3>
+                        <p>Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li>
+                        <h3>Курица “Кунг пао”</h3>
+                        <h3>649.90</h3>
+                        <p>Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li>
+                        <h3>Курица “Кунг пао”</h3>
+                        <h3>649.90</h3>
+                        <p>Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li>
+                        <h3>Курица “Кунг пао”</h3>
+                        <h3>649.90</h3>
+                        <p>Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li>
+                        <h3>Курица “Кунг пао”</h3>
+                        <h3>649.90</h3>
+                        <p>Курица, сушеный перец чили и кешью</p>
+                    </li>
+                </ol>
+            </div>
+        </article>
+    </section>
+</main>
 </body>
 </html>
