--- a/src/main/resources/static/css/index.scss
+++ b/src/main/resources/static/css/index.scss
@@ -9,3 +9,18 @@ nav {
   position: relative;
   z-index: 10;
 }
+
+.cta-image {
+  max-height: 50vh;
+}
+
+.bg-black-60 {
+  background-color: rgba(0, 0, 0, .6);
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, .1);
+}
