--- a/src/main/resources/static/css/style.build.tailwind.css
+++ b/src/main/resources/static/css/style.build.tailwind.css
@@ -507,6 +507,33 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+} .container {
+  width: 100%;
+} @media (min-width: 640px) {
+
+  .container {
+    max-width: 640px;
+  }
+} @media (min-width: 768px) {
+
+  .container {
+    max-width: 768px;
+  }
+} @media (min-width: 1024px) {
+
+  .container {
+    max-width: 1024px;
+  }
+} @media (min-width: 1280px) {
+
+  .container {
+    max-width: 1280px;
+  }
+} @media (min-width: 1536px) {
+
+  .container {
+    max-width: 1536px;
+  }
 } .sr-only {
   position: absolute;
   width: 1px;
@@ -570,8 +597,16 @@ video {
   margin-left: auto;
 } .mt-3 {
   margin-top: 0.75rem;
+} .mb-8 {
+  margin-bottom: 2rem;
 } .mb-6 {
   margin-bottom: 1.5rem;
+} .mb-4 {
+  margin-bottom: 1rem;
+} .mb-0\.5 {
+  margin-bottom: 0.125rem;
+} .mb-0 {
+  margin-bottom: 0px;
 } .block {
   display: block;
 } .inline-block {
@@ -584,6 +619,8 @@ video {
   display: inline-flex;
 } .table {
   display: table;
+} .grid {
+  display: grid;
 } .hidden {
   display: none;
 } .h-full {
@@ -626,6 +663,8 @@ video {
   max-width: 20rem;
 } .max-w-7xl {
   max-width: 80rem;
+} .max-w-5xl {
+  max-width: 64rem;
 } .flex-1 {
   flex: 1 1 0%;
 } .flex-shrink-0 {
@@ -640,16 +679,28 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 } .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+} .grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+} .flex-row-reverse {
+  flex-direction: row-reverse;
 } .flex-col {
   flex-direction: column;
+} .items-start {
+  align-items: flex-start;
 } .items-center {
   align-items: center;
 } .justify-center {
   justify-content: center;
 } .justify-between {
   justify-content: space-between;
+} .gap-8 {
+  gap: 2rem;
 } .gap-4 {
   gap: 1rem;
+} .gap-6 {
+  gap: 1.5rem;
+} .gap-y-24 {
+  row-gap: 6rem;
 } .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -666,10 +717,14 @@ video {
   border-radius: 0.375rem;
 } .rounded-lg {
   border-radius: 0.5rem;
+} .rounded-xl {
+  border-radius: 0.75rem;
 } .border-4 {
   border-width: 4px;
 } .border {
   border-width: 1px;
+} .border-2 {
+  border-width: 2px;
 } .border-t {
   border-top-width: 1px;
 } .border-b {
@@ -685,6 +740,9 @@ video {
 } .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+} .border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 } .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -705,12 +763,22 @@ video {
   background-color: rgb(14 12 15 / var(--tw-bg-opacity));
 } .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+} .object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+} .object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 } .p-4 {
   padding: 1rem;
 } .p-2 {
   padding: 0.5rem;
 } .p-1 {
   padding: 0.25rem;
+} .p-10 {
+  padding: 2.5rem;
+} .p-6 {
+  padding: 1.5rem;
 } .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -732,6 +800,12 @@ video {
 } .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+} .px-32 {
+  padding-left: 8rem;
+  padding-right: 8rem;
+} .py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 } .pt-2 {
   padding-top: 0.5rem;
 } .pt-5 {
@@ -746,6 +820,8 @@ video {
   padding-bottom: 0.75rem;
 } .pt-4 {
   padding-top: 1rem;
+} .text-center {
+  text-align: center;
 } .font-body {
   font-family: Lumios-Maker, Inter, ui-sans-serif, system-ui, -apple-system, system-ui, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 } .text-base {
@@ -766,9 +842,12 @@ video {
 } .text-5xl {
   font-size: 3rem;
   line-height: 1;
-} .text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+} .text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+} .text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 } .font-medium {
   font-weight: 500;
 } .font-semibold {
@@ -900,6 +979,10 @@ video {
     width: 16rem;
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:flex-col {
     flex-direction: column;
   }
@@ -913,6 +996,14 @@ video {
     padding-left: 16rem;
   }
 } @media (min-width: 1024px) {
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 
   .lg\:px-8 {
     padding-left: 2rem;
