--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -111,46 +111,180 @@ Heroicon name: outline/x" x-state:on="Menu open" x-state:off="Menu closed" class
     </div>
 </nav>
 <main>
-    <img class="relative w-full" style="top: -64px" src="../static/images/sushi.webp" alt="Menu call to action background">
+    <section class="object-cover relative w-full flex justify-center items-center gap-8" style="top: -64px" id="cta">
+        <img class="object-cover cta-image w-full" src="../static/images/sushi.webp" alt="Menu call to action background">
+        <div class="absolute flex items-center justify-center bg-black-60 flex-col px-32 py-16">
+            <h1 class="font-body text-8xl">Меню</h1>
+            <p class="text-center">У нас есть китайская еда, японская еда и корейская еда</p>
+        </div>
+    </section>
+<!--    padding: 75px 130px;-->
 
-    <section id="menus">
-        <article class="flex justify-center gap-4">
-            <img src="../static/images/menu-1.png" alt="menu_name">
-            <div class="border-4 border-white">
-                <h2 class="font-body text-8xl mb-6">Китайская кухня</h2>
+    <section id="menus" class="flex flex-col items-center gap-y-24 mb-8">
+        <article class="flex items-start justify-center gap-4 max-w-5xl w-full">
+            <img class="object-contain" src="../static/images/menu-1.png" alt="menu_name">
+            <div class="border-4 border-white p-10 w-full">
+                <h2 class="font-body text-5xl mb-8">Китайская кухня</h2>
                 <ol>
-                    <li class="border-b">
-                        <div class="flex justify-between">
-                            <h3 class="font-body text-5xl">Курица “Кунг пао”</h3>
-                            <h3 class="font-body text-5xl">649.90</h3>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
                         </div>
 
-                        <p class="text-lg">Курица, сушеный перец чили и кешью</p>
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
-                    <li>
-                        <h3>Курица “Кунг пао”</h3>
-                        <h3>649.90</h3>
-                        <p>Курица, сушеный перец чили и кешью</p>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
-                    <li>
-                        <h3>Курица “Кунг пао”</h3>
-                        <h3>649.90</h3>
-                        <p>Курица, сушеный перец чили и кешью</p>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
-                    <li>
-                        <h3>Курица “Кунг пао”</h3>
-                        <h3>649.90</h3>
-                        <p>Курица, сушеный перец чили и кешью</p>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
-                    <li>
-                        <h3>Курица “Кунг пао”</h3>
-                        <h3>649.90</h3>
-                        <p>Курица, сушеный перец чили и кешью</p>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
-                    <li>
-                        <h3>Курица “Кунг пао”</h3>
-                        <h3>649.90</h3>
-                        <p>Курица, сушеный перец чили и кешью</p>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                </ol>
+            </div>
+        </article>
+        <article class="flex items-start flex-row-reverse justify-center gap-4 max-w-5xl w-full">
+            <img class="object-contain" src="../static/images/menu-2.png" alt="menu_name">
+            <div class="border-4 border-white p-10 w-full">
+                <h2 class="font-body text-5xl mb-8">Китайская кухня</h2>
+                <ol>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                </ol>
+            </div>
+        </article>
+        <article class="flex items-start justify-center gap-4 max-w-5xl w-full">
+            <img class="object-contain" src="../static/images/menu-3.png" alt="menu_name">
+            <div class="border-4 border-white p-10 w-full">
+                <h2 class="font-body text-5xl mb-8">Китайская кухня</h2>
+                <ol>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
+                    </li>
+                    <li class="border-b mb-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-body text-3xl">Курица “Кунг пао”</h3>
+                            <h3 class="font-body text-3xl">649.90</h3>
+                        </div>
+
+                        <p class="mb-0.5">Курица, сушеный перец чили и кешью</p>
                     </li>
                 </ol>
             </div>
