--- a/src/main/resources/static/css/style.build.tailwind.css
+++ b/src/main/resources/static/css/style.build.tailwind.css
@@ -564,13 +564,29 @@ video {
   top: 0px;
 } .right-0 {
   right: 0px;
-} .z-40 {
-  z-index: 40;
 } .z-10 {
   z-index: 10;
+} .z-40 {
+  z-index: 40;
 } .mx-auto {
   margin-left: auto;
   margin-right: auto;
+} .my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+} .my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+} .-mr-2 {
+  margin-right: -0.5rem;
+} .ml-3 {
+  margin-left: 0.75rem;
+} .ml-auto {
+  margin-left: auto;
+} .mt-3 {
+  margin-top: 0.75rem;
+} .mb-8 {
+  margin-bottom: 2rem;
 } .-mr-12 {
   margin-right: -3rem;
 } .ml-1 {
@@ -579,8 +595,6 @@ video {
   margin-top: 1.25rem;
 } .mr-4 {
   margin-right: 1rem;
-} .ml-3 {
-  margin-left: 0.75rem;
 } .mr-3 {
   margin-right: 0.75rem;
 } .-ml-0\.5 {
@@ -591,14 +605,6 @@ video {
   margin-left: -0px;
 } .-mt-0 {
   margin-top: -0px;
-} .-mr-2 {
-  margin-right: -0.5rem;
-} .ml-auto {
-  margin-left: auto;
-} .mt-3 {
-  margin-top: 0.75rem;
-} .mb-8 {
-  margin-bottom: 2rem;
 } .mb-6 {
   margin-bottom: 1.5rem;
 } .mb-4 {
@@ -623,46 +629,46 @@ video {
   display: grid;
 } .hidden {
   display: none;
-} .h-full {
-  height: 100%;
-} .h-10 {
-  height: 2.5rem;
-} .h-6 {
-  height: 1.5rem;
-} .h-0 {
-  height: 0px;
+} .h-16 {
+  height: 4rem;
 } .h-8 {
   height: 2rem;
+} .h-6 {
+  height: 1.5rem;
+} .h-10 {
+  height: 2.5rem;
+} .h-full {
+  height: 100%;
+} .h-0 {
+  height: 0px;
 } .h-9 {
   height: 2.25rem;
 } .h-12 {
   height: 3rem;
 } .h-96 {
   height: 24rem;
-} .h-16 {
-  height: 4rem;
 } .min-h-\[640px\] {
   min-height: 640px;
 } .min-h-0 {
   min-height: 0px;
-} .w-full {
-  width: 100%;
-} .w-10 {
-  width: 2.5rem;
-} .w-6 {
-  width: 1.5rem;
 } .w-auto {
   width: auto;
+} .w-6 {
+  width: 1.5rem;
+} .w-10 {
+  width: 2.5rem;
+} .w-full {
+  width: 100%;
 } .w-14 {
   width: 3.5rem;
 } .w-9 {
   width: 2.25rem;
 } .w-12 {
   width: 3rem;
-} .max-w-xs {
-  max-width: 20rem;
 } .max-w-7xl {
   max-width: 80rem;
+} .max-w-xs {
+  max-width: 20rem;
 } .max-w-5xl {
   max-width: 64rem;
 } .flex-1 {
@@ -693,74 +699,71 @@ video {
   justify-content: center;
 } .justify-between {
   justify-content: space-between;
+} .justify-items-center {
+  justify-items: center;
 } .gap-8 {
   gap: 2rem;
-} .gap-4 {
-  gap: 1rem;
 } .gap-6 {
   gap: 1.5rem;
+} .gap-4 {
+  gap: 1rem;
 } .gap-y-24 {
   row-gap: 6rem;
-} .space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 } .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+} .space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 } .overflow-y-auto {
   overflow-y: auto;
-} .rounded-full {
-  border-radius: 9999px;
 } .rounded-md {
   border-radius: 0.375rem;
+} .rounded-full {
+  border-radius: 9999px;
 } .rounded-lg {
   border-radius: 0.5rem;
-} .rounded-xl {
-  border-radius: 0.75rem;
+} .border-6 {
+  border-width: 6px;
 } .border-4 {
   border-width: 4px;
 } .border {
   border-width: 1px;
-} .border-2 {
-  border-width: 2px;
 } .border-t {
   border-top-width: 1px;
 } .border-b {
   border-bottom-width: 1px;
 } .border-dashed {
   border-style: dashed;
-} .border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 } .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 } .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-} .border-gray-300 {
+} .border-gray-200 {
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+} .bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 12 15 / var(--tw-bg-opacity));
+} .bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+} .bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 } .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 } .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-} .bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-} .bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 } .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-} .bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 12 15 / var(--tw-bg-opacity));
 } .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 } .object-contain {
@@ -769,34 +772,26 @@ video {
 } .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-} .p-4 {
-  padding: 1rem;
 } .p-2 {
   padding: 0.5rem;
 } .p-1 {
   padding: 0.25rem;
+} .p-4 {
+  padding: 1rem;
 } .p-10 {
   padding: 2.5rem;
-} .p-6 {
-  padding: 1.5rem;
 } .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-} .px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-} .py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-} .py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-} .py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 } .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+} .py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+} .px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 } .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -806,8 +801,21 @@ video {
 } .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
+} .px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+} .py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+} .py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 } .pt-2 {
   padding-top: 0.5rem;
+} .pb-3 {
+  padding-bottom: 0.75rem;
+} .pt-4 {
+  padding-top: 1rem;
 } .pt-5 {
   padding-top: 1.25rem;
 } .pb-4 {
@@ -816,38 +824,37 @@ video {
   padding-left: 0.25rem;
 } .pt-1 {
   padding-top: 0.25rem;
-} .pb-3 {
-  padding-bottom: 0.75rem;
-} .pt-4 {
-  padding-top: 1rem;
 } .text-center {
   text-align: center;
 } .font-body {
   font-family: Lumios-Maker, Inter, ui-sans-serif, system-ui, -apple-system, system-ui, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-} .text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 } .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+} .text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+} .text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+} .text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+} .text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 } .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
 } .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-} .text-8xl {
-  font-size: 6rem;
-  line-height: 1;
 } .text-5xl {
   font-size: 3rem;
   line-height: 1;
 } .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-} .text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 } .font-medium {
   font-weight: 500;
 } .font-semibold {
@@ -944,6 +951,10 @@ video {
     display: none;
   }
 
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -979,8 +990,8 @@ video {
     width: 16rem;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-col {
@@ -999,10 +1010,6 @@ video {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:px-8 {
