--- a/src/main/resources/static/css/style.build.tailwind.css
+++ b/src/main/resources/static/css/style.build.tailwind.css
@@ -717,6 +717,10 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+} .space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 } .overflow-y-auto {
   overflow-y: auto;
 } .rounded-md {
@@ -764,6 +768,9 @@ video {
 } .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+} .bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 144 49 / var(--tw-bg-opacity));
 } .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 } .object-contain {
@@ -810,6 +817,9 @@ video {
 } .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+} .py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 } .pt-2 {
   padding-top: 0.5rem;
 } .pb-3 {
@@ -867,6 +877,9 @@ video {
 } .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+} .text-grey-600 {
+  --tw-text-opacity: 1;
+  color: rgb(20 20 20 / var(--tw-text-opacity));
 } .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
