--- a/src/main/resources/static/css/index.scss
+++ b/src/main/resources/static/css/index.scss
@@ -24,3 +24,11 @@ nav {
   position: absolute;
   background-color: rgba(0, 0, 0, .1);
 }
+
+button:active, a:active {
+  filter: brightness(120%);
+}
+
+*, :focus-visible {
+  outline: none;
+}
